# vut-izg-labs

./: .gitignore  README.md
1/: .gitignore  CMakeLists.txt  Makefile  README.md  base.h  color.c  color.h  globals.h  io.c  io.h  main.c  student.c  student.h
2/: CMakeLists.txt  Makefile  README.md  base.h  color.cpp  color.h  globals.h  io.cpp  io.h  main.cpp  student.cpp  student.h
3/: CMakeLists.txt  Makefile  README.md
3/src/: base.h  color.cpp  color.h  globals.h  io.cpp  io.h  main.cpp  student.cpp  student.h
4/: CMakeLists.txt  Makefile  README.md  base.h  color.cpp  color.h  globals.h  lab04.ogv  main.cpp  main.h  student.cpp  student.h  vector.cpp  vector.h
5/: CMakeLists.txt  Makefile  README.md
5/src/: base.h  main.cpp  main.h  model.cpp  model.h  student.cpp  transform.cpp  transform.h
6/: CMakeLists.txt  Doxyfile  README.md  linux_create_makefile.sh
6/examples/: quadExample.c  quadExample.h
6/opengl/: opengl.c  opengl.h
6/student/: bunny.h  camera.c  fwd.h  linearAlgebra.c  linearAlgebra.h  main.c  mouseCamera.c  mouseCamera.h  program.c  program.h  student.c  student.h
