# Author: Dominik Harmim <harmim6@gmail.com>

CMAKE_MINIMUM_REQUIRED(VERSION 3.11)


PROJECT(izg_lab_02)


IF(MSVC)
	SET(SDL_INCLUDES
		"${CMAKE_CURRENT_SOURCE_DIR}/SDL-1.2.15/include" "Q:/mingw/SDL/SDL")
	SET(SDL_LIBS
		mingw32 SDLmain SDL
		"${CMAKE_CURRENT_SOURCE_DIR}/SDL-1.2.15/lib" "Q:/mingw/SDL")
ELSE()
	SET(SDL_INCLUDES "/usr/include/SDL" "/usr/local/include/SDL")
	SET(SDL_LIBS SDL)

	IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
		EXECUTE_PROCESS(COMMAND sdl-config --libs OUTPUT_VARIABLE SDL_LIBS)
		STRING(STRIP "${SDL_LIBS}" SDL_LIBS)
		EXECUTE_PROCESS(COMMAND sdl-config --cflags OUTPUT_VARIABLE SDL_CFLAGS)
		ADD_DEFINITIONS(${SDL_CFLAGS})
	ENDIF()
ENDIF()


SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_CXX_FLAGS "-g3 -Wall -Wno-unused-function -fmessage-length=0")


FILE(GLOB SOURCES "*.cpp")
FILE(GLOB HEADERS "*.h")


EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E create_symlink
	"${CMAKE_CURRENT_SOURCE_DIR}/data" "${CMAKE_CURRENT_BINARY_DIR}/data")


ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL_LIBS})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${SDL_INCLUDES})
