# Author: Dominik Harmim <harmim6@gmail.com>

CMAKE_MINIMUM_REQUIRED(VERSION 3.7.0)


PROJECT(Izg2017Lab6)

SET(APPLICATION_NAME izg2017Lab6)


IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	SET(APPLE TRUE)
ENDIF()

IF(MSVC)
	SET(USE_PREBUILD_LIB_PACKAGE ON CACHE BOOL "Use prebuild lib package.")
	IF(USE_PREBUILD_LIB_PACKAGE)
		SET(SDL2_DIR "${CMAKE_CURRENT_SOURCE_DIR}/sdl2/win64/cmake"
			CACHE STRING "" FORCE)
		FILE(COPY "${CMAKE_CURRENT_SOURCE_DIR}/sdl2/win64/bin/SDL2.dll"
			DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
		FILE(COPY "${CMAKE_CURRENT_SOURCE_DIR}/sdl2/win64/bin/SDL2d.dll"
			DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
	ENDIF()
ENDIF()


FIND_PACKAGE(SDL2 REQUIRED)


SET(STUDENT_SOURCES
	student/student.c
	student/linearAlgebra.c
	student/camera.c
	student/bunny.c
	student/mouseCamera.c
	student/program.c
	student/main.c)
SET(STUDENT_INCLUDES
	student/student.h
	student/linearAlgebra.h
	student/camera.h
	student/bunny.h
	student/mouseCamera.h
	student/program.h
	student/fwd.h)

SET(EXAMPLE_SOURCES
	examples/quadExample.c)
SET(EXAMPLE_HEADERS
	examples/quadExample.h)

SET(OPENGL_INCLUDES
	opengl/opengl.h)
SET(OPENGL_SOURCES
	opengl/opengl.c)


SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_C_STANDARD 99)

IF(CMAKE_COMPILER_IS_GNUCXX)
	ADD_COMPILE_OPTIONS(-W)
	ADD_COMPILE_OPTIONS(-Wall)
	ADD_COMPILE_OPTIONS(-Wconversion)
	ADD_COMPILE_OPTIONS(-pedantic)
ENDIF()

IF(CMAKE_COMPILER_IS_GNUCC)
	ADD_COMPILE_OPTIONS(-W)
	ADD_COMPILE_OPTIONS(-Wall)
	ADD_COMPILE_OPTIONS(-Wconversion)
	ADD_COMPILE_OPTIONS(-pedantic)
ENDIF()


IF(APPLE)
	EXECUTE_PROCESS(COMMAND sdl2-config --libs OUTPUT_VARIABLE SDL_LIBS)
	STRING(STRIP "${SDL_LIBS}" SDL_LIBS)
	EXECUTE_PROCESS(COMMAND sdl2-config --cflags OUTPUT_VARIABLE SDL_CFLAGS)
	ADD_DEFINITIONS(${SDL_CFLAGS})
ELSE()
	SET(SDL_LIBS SDL2::SDL2 SDL2::SDL2main)
ENDIF()


ADD_EXECUTABLE(
	${APPLICATION_NAME}
	${OPENGL_SOURCES} ${OPENGL_INCLUDES}
	${STUDENT_SOURCES} ${STUDENT_INCLUDES}
	${EXAMPLE_SOURCES} ${EXAMPLE_HEADERS})
TARGET_LINK_LIBRARIES(${APPLICATION_NAME} ${SDL_LIBS})
TARGET_INCLUDE_DIRECTORIES(
	${APPLICATION_NAME}
	PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR})
